[gd_scene load_steps=4 format=2]

[ext_resource path="res://Battle/Battle_View.gd" type="Script" id=1]
[ext_resource path="res://Battle/AvatarScene.tscn" type="PackedScene" id=2]
[ext_resource path="res://Battle/Skill_Button.tscn" type="PackedScene" id=3]

[node name="Battle_View" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_right = 6.10352e-05
rect_min_size = Vector2( 800, 600 )
rect_scale = Vector2( 0.375, 0.375 )
script = ExtResource( 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ColorRect" type="ColorRect" parent="."]
modulate = Color( 1, 1, 1, 0.45098 )
anchor_right = 1.0
anchor_bottom = 1.0
color = Color( 0.305882, 0.305882, 0.305882, 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="VBoxContainer" type="VBoxContainer" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0

[node name="ActorSpace" type="ColorRect" parent="VBoxContainer"]
self_modulate = Color( 1, 1, 1, 0 )
margin_right = 800.0
margin_bottom = 396.0
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="Enemy" parent="VBoxContainer/ActorSpace" instance=ExtResource( 2 )]
margin_left = 736.0
margin_top = 48.0
margin_right = 192.0
margin_bottom = -92.0
rect_scale = Vector2( -1, 1 )

[node name="Player" parent="VBoxContainer/ActorSpace" instance=ExtResource( 2 )]
margin_left = 64.0
margin_top = 48.0
margin_right = -480.0
margin_bottom = -92.0

[node name="ButtonSpace" type="ColorRect" parent="VBoxContainer"]
margin_top = 400.0
margin_right = 800.0
margin_bottom = 600.0
rect_min_size = Vector2( 0, 200 )
color = Color( 0, 0, 0, 1 )

[node name="RichTextLabel" type="RichTextLabel" parent="VBoxContainer/ButtonSpace"]
margin_left = 311.0
margin_top = 20.0
margin_right = 766.0
margin_bottom = 177.0
text = "HE BUE BUE LOREM IPSUM LOREM I{SUM HE BUE BUE LOREM IPSUM LOREM I{SUM
HE BUE BUE LOREM IPSUM LOREM I{SUM
HE BUE BUE LOREM IPSUM LOREM I{SUM
HE BUE BUE LOREM IPSUM LOREM I{SUMHE BUE BUE LOREM IPSUM LOREM I{SUMHE BUE BUE LOREM IPSUM LOREM I{SUMHE BUE BUE LOREM IPSUM LOREM I{SUM
HE BUE BUE LOREM IPSUM LOREM I{SUMHE BUE BUE LOREM IPSUM LOREM I{SUM
HE BUE BUE LOREM IPSUM LOREM I{SUMHE BUE BUE LOREM IPSUM LOREM I{SUM"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Skill_Button" parent="VBoxContainer/ButtonSpace" instance=ExtResource( 3 )]
margin_left = 35.6825
margin_top = 24.3521
margin_right = -700.317
margin_bottom = -111.648

[node name="Skill_Button2" parent="VBoxContainer/ButtonSpace" instance=ExtResource( 3 )]
margin_left = 130.323
margin_top = 23.3392
margin_right = -605.677
margin_bottom = -112.661

[node name="Skill_Button3" parent="VBoxContainer/ButtonSpace" instance=ExtResource( 3 )]
margin_left = 32.9539
margin_top = 113.707
margin_right = -703.046
margin_bottom = -22.2934

[node name="Skill_Button4" parent="VBoxContainer/ButtonSpace" instance=ExtResource( 3 )]
margin_left = 129.507
margin_top = 111.795
margin_right = -606.493
margin_bottom = -24.2054

[node name="Camera2D" type="Camera2D" parent="."]
anchor_mode = 0
current = true
zoom = Vector2( 0.375, 0.375 )
